--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,8 @@ jobs:
         with:
           packages: ${{github.event.inputs.packages}}
           allow-modifiers: true
+      - run: |
+        echo ${{toJSON(fromJSON(steps.setup.outputs.packages).*)}}
   test:
     needs: setup
     strategy:
