--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -1,23 +1,25 @@
-name: 'Tests'
-description: 'Run tests for a package'
+name: Tests
+description: Run tests for a package
 inputs:
   package:
-    description: "name of the package"
+    description: name of the package
     required: true
+  type:
+    description: type of the testing (unit, it, e2e, coverage)
   install:
-    description: "name and version of the framework to install"
+    description: names of packages to install before testing
   links:
-    description: "links"
+    description: names of packages to link before testing
   linking-depth:
-    description: "linking depth"
+    description: linking depth
     default: 0
   grep:
-    description: "grep"
+    description: grep pattern to filter tests
   report:
-    description: "report level"
-    default: "sandbox"
+    description: report level
+    default: sandbox
 runs:
-  using: "composite"
+  using: composite
   steps:
     - shell: bash
       env:
@@ -43,8 +45,7 @@ runs:
 
         npm run build --if-present
         npm run setup --if-present
-        npm run test
+
+        if [ ! -z "${{inputs.type}}" ]; then npm run test:${{inputs.type}}; else npm run test; fi
 
         if [ "${{inputs.sandbox}}" = "sandbox" ]; then npm run report --if-present -- --sandbox; else npm run report --if-present; fi
-
-        cat coverage-test-report.xml || echo "failed to cat coverage-test-report.xml file"
