--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,16 +4,18 @@ on:
   workflow_dispatch:
     inputs:
       packages:
-        description: "package names (aliases and variations)"
+        description: package names (aliases and variations)
         required: true
+      type:
+        description: testing type (unit, it, e2e, coverage)
       links:
-        description: "linked packages names"
-        default: "eyes-sdk-core"
+        description: linked package names
+        default: eyes-sdk-core
       linking-depth:
-        description: "linking depth"
+        description: linking depth
         default: 0
       grep:
-        description: "grep pattern"
+        description: grep pattern
 env:
   CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
   APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
@@ -35,15 +37,12 @@ jobs:
         id: setup
         with:
           packages: ${{github.event.inputs.packages}}
-          allow-modifiers: true
-      - name: Debug
-        run: |
-          echo ${{toJSON(fromJSON(steps.setup.outputs.packages).*)}}
+          allow-variations: true
   test:
     needs: setup
     strategy:
       matrix: 
-        include: ${{fromJSON(needs.setup.outputs.packages).*}}
+        include: ${{fromJSON(needs.setup.outputs.packages)}}
       fail-fast: false
     name: ${{matrix.displayName}}
     runs-on: ubuntu-latest
@@ -58,6 +57,7 @@ jobs:
         uses: ./.github/actions/tests
         with:
           package: ${{matrix.package}}
+          type: ${{github.event.inputs.type}}
           install: ${{matrix.install}}
           links: ${{github.event.inputs.links}}
           linking-depth: ${{github.event.inputs['linking-depth']}}
