fix testcafe package.json to align others

--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -31,35 +31,34 @@
     "perf:full": "yarn perf && yarn perf -c 5",
     "perf:lite": "testcafe chrome:headless test/perf/perf-lite.spec.js",
     "perf:lite:full": "yarn perf:lite && yarn perf:lite -c 5",
-    "deps": "bongo deps",
     "lint": "eslint '**/*.ts' '**/*.js'",
     "render": "node ../sdk-shared/src/render.js",
     "link": "node ../sdk-shared/scripts/link.js",
-    "build": "yarn build:dist && yarn build:types",
-    "build:dist": "tsc",
-    "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts",
-    "test": "yarn build:dist && yarn test:it",
-    "test:unit": "mocha --no-timeouts ./test/unit/*.spec.js",
-    "test:it:chrome": "testcafe chrome test/it/spec-driver.spec.js",
-    "test:it:firefox:headless": "testcafe firefox:headless test/it/spec-driver.spec.js",
-    "test:it:firefox": "testcafe firefox test/it/spec-driver.spec.js",
-    "test:it": "testcafe chrome:headless test/it && yarn test:it:firefox:headless",
-    "test:it:full": "testcafe chrome:headless test/it && yarn test:it:chrome && yarn test:it:firefox:headless && yarn test:it:firefox",
-    "test:spec": "testcafe chrome:headless ./test/it/spec-driver.spec.js",
-    "test:api": "testcafe chrome:headless ./test/it/legacy-api.spec.js",
     "run:testcafe:10": "./node_modules/testcafe-10/bin/testcafe-with-v8-flag-filter.js",
     "run:testcafe:9": "./node_modules/testcafe-9/bin/testcafe-with-v8-flag-filter.js",
     "run:testcafe:8": "./node_modules/testcafe-8/bin/testcafe-with-v8-flag-filter.js",
     "run:testcafe:7": "./node_modules/testcafe-7/bin/testcafe-with-v8-flag-filter.js",
-    "coverage:generate": "coverage-tests generate ./test/coverage/index.js --name 'eyes-testcafe'",
-    "coverage:report": "coverage-tests report ./test/coverage/index.js --name 'eyes-testcafe'",
-    "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
-    "coverage:prod": "yarn coverage:generate && yarn test:coverage && yarn coverage:report",
+    "build": "yarn build:dist && yarn build:types",
+    "build:dist": "tsc",
+    "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts",
+    "generate:tests": "coverage-tests generate ./test/coverage/index.js --name 'eyes-testcafe'",
+    "test": "yarn build:dist && yarn test:it && yarn test:coverage",
+    "test:unit": "mocha --no-timeouts ./test/unit/*.spec.js",
+    "test:it": "testcafe chrome:headless test/it && yarn test:it:firefox:headless",
+    "test:it:chrome": "testcafe chrome test/it/spec-driver.spec.js",
+    "test:it:firefox": "testcafe firefox test/it/spec-driver.spec.js",
+    "test:it:firefox:headless": "testcafe firefox:headless test/it/spec-driver.spec.js",
+    "test:it:full": "testcafe chrome:headless test/it && yarn test:it:chrome && yarn test:it:firefox:headless && yarn test:it:firefox",
+    "test:spec": "testcafe chrome:headless ./test/it/spec-driver.spec.js",
+    "test:api": "testcafe chrome:headless ./test/it/legacy-api.spec.js",
     "test:coverage": "APPLITOOLS_USE_PRELOADED_CONFIG=true APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/generic/*WithVg* test/custom --reporter spec,xunit:coverage-test-report.xml",
     "test:coverage:generic": "APPLITOOLS_USE_PRELOADED_CONFIG=true APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/generic/*WithVg* --reporter spec,xunit:coverage-test-report.xml",
     "test:coverage:custom": "APPLITOOLS_USE_PRELOADED_CONFIG=true APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe (custom)' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/custom --reporter spec,xunit:coverage-test-report.xml",
-    "prepublish:setup": "echo 'no-op'",
-    "preversion": "yarn deps && bongo preversion && yarn build && yarn test && yarn coverage:prod",
+    "report": "coverage-tests report ./test/coverage/index.js --name 'eyes-testcafe'",
+    "deps": "bongo deps",
+    "gh:test": "gh workflow run test.yml -f packages='testcafe' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
+    "gh:publish": "gh workflow run publish.yml -f packages='testcafe'",
+    "preversion": "yarn deps && bongo preversion && yarn build",
     "version": "bongo version",
     "postversion": "bongo postversion"
   },
