coverage: update coverage tool

--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -44,11 +44,11 @@
     "build": "yarn build:dist && yarn build:types",
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules playwright",
-    "generate:tests": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-playwright'",
+    "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright'",
     "test": "yarn build:dist && yarn test:it && yarn test:coverage",
     "test:it": "mocha --no-timeouts ./test/it/*.spec.js",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
-    "report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-playwright'",
+    "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright'",
     "deps": "bongo deps",
     "gh:test": "gh workflow run test.yml -f packages='playwright' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
     "gh:publish": "gh workflow run publish.yml -f packages='playwright'",
