--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -41,7 +41,7 @@
     "build": "yarn build:dist && yarn build:types",
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts",
-    "generate:tests": "coverage-tests generate ./test/coverage/index.js --name 'eyes-testcafe'",
+    "generate:tests": "coverage-tests generate ./test/coverage/config.js --name 'eyes-testcafe'",
     "test": "yarn build:dist && yarn test:it && yarn test:coverage",
     "test:unit": "mocha --no-timeouts ./test/unit/*.spec.js",
     "test:it": "testcafe chrome:headless test/it && yarn test:it:firefox:headless",
@@ -54,7 +54,7 @@
     "test:coverage": "yarn generate:tests && APPLITOOLS_USE_PRELOADED_CONFIG=true APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/generic/*WithVg* test/custom --reporter spec,xunit:coverage-test-report.xml",
     "test:coverage:generic": "yarn generate:tests && APPLITOOLS_USE_PRELOADED_CONFIG=true APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/generic/*WithVg* --reporter spec,xunit:coverage-test-report.xml",
     "test:coverage:custom": "yarn generate:tests && APPLITOOLS_USE_PRELOADED_CONFIG=true APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe (custom)' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/custom --reporter spec,xunit:coverage-test-report.xml",
-    "report": "coverage-tests report ./test/coverage/index.js --name 'eyes-testcafe'",
+    "report": "coverage-tests report ./test/coverage/config.js --name 'eyes-testcafe'",
     "deps": "bongo deps",
     "gh:test": "gh workflow run test.yml -f packages='testcafe' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
     "gh:publish": "gh workflow run publish.yml -f packages='testcafe'",
@@ -89,7 +89,6 @@
     "husky": "^4.3.8",
     "mocha": "^8.0.1",
     "prettier": "^2.1.2",
-    "sync-fetch": "0.3.0",
     "testcafe": "^1.10.0",
     "testcafe-10": "npm:testcafe@^1.10.0",
     "testcafe-7": "npm:testcafe@1.7.1",
