--- a/.github/workflows/issue_response.yml
+++ b/.github/workflows/issue_response.yml
@@ -12,6 +12,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        respondableId: ${{ github.event.pull_request.node_id }}
-        response: "Hello @${{ github.event.pull_request.user.login }}! Please send an email to `support@applitools.com` and we'll be happy to further assist you."
-        author: ${{ github.event.pull_request.user.login }}
+        respondableId: ${{ github.event.issue.node_id }}
+        response: "Hello @${{ github.event.issue.user.login }}! Please send an email to `support@applitools.com` and we'll be happy to further assist you."
+        author: ${{ github.event.issue.user.login }} 
