--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -8,9 +8,9 @@ jobs:
     name: changelog
     steps:
       - uses: actions/checkout@v2
+        if: "!contains(github.event.head_commit.message, '[Security]')"
         with:
           fetch-depth: 0
-      - if: "!contains(github.event.head_commit.message, '[Security]')"
       - uses: actions/setup-node@v1
         with:
           node-version: 14
