--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@applitools/test-utils": "1.0.0",
     "chalk": "3.0.0",
+    "cli-table3": "^0.6.0",
     "yargs": "15.3.1"
   },
   "devDependencies": {
