--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -60,6 +60,7 @@
     "@applitools/eyes-sdk-core": "12.17.4",
     "@applitools/functional-commons": "1.6.0",
     "@applitools/monitoring-commons": "1.0.19",
+    "@applitools/test-server": "1.0.3",
     "@applitools/visual-grid-client": "15.8.2",
     "boxen": "4.2.0",
     "chalk": "3.0.0",
