--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -77,7 +77,7 @@
     "@applitools/sdk-release-kit": "0.13.0",
     "@applitools/sdk-shared": "0.9.0",
     "@applitools/snaptdout": "^1.0.1",
-    "@applitools/utils": "^1.1.3",
+    "@applitools/utils": "1.2.0",
     "@storybook/addon-options": "^5.2.8",
     "@storybook/react": "^5.2.8",
     "@testing-library/dom": "^5.6.1",
