replace setWindowRect with setWindowSize

--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -49,7 +49,7 @@
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules selenium-webdriver",
     "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-selenium'",
     "test": "yarn build:dist && yarn test:it && yarn test:coverage",
-    "test:it": "mocha --no-timeouts --parallel --jobs 15 './test/it/**/*.spec.js'",
+    "test:it": "mocha --no-timeouts './test/it/**/*.spec.js'",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-selenium'",
     "setup": "yarn docker:setup",
